error in displaying tasks on popup

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "default_icon": {
     },
     "default_title": "Task Tracker",
-    "default_popup": "popup.html"
+    "default_popup": "newpopup.html"
   },
   "permissions": [
     "storage",
