changed newtab to testtab inside manifest

--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,13 @@
   "description": "idk what to put here",
   "version": "1.0.0",
   "chrome_url_overrides": {
-    "newtab": "newtab.html"
+    "newtab": "testtab.html"
   },
   "browser_action": {
     "default_icon": {
     },
-    "default_title": "Task Tracker",
-    "default_popup": "newpopup.html"
+    "default_title": "Task Tracker"
+    
   },
   "permissions": [
     "storage",
